# astar-ros-pkg

./: ProjectHome.md
ppl_detection/: CMakeLists.txt  manifest.xml
ppl_detection/launch/: kinect.launch
ppl_detection/src/: kinect_detect.cpp  pca.cpp  svm.cpp
tilting_servo/action/: servo.action
tilting_servo/launch/: servo.launch
tilting_servo/src/: base_linktf.cpp  servo.c  servo.h  servo_action_client.cpp
trunk/ppl_detection/: kinect_detect.vcg  mainpage.dox
trunk/ppl_detection/msg/: Human.msg  Tracker.msg
trunk/ppl_detection/src/: kinect_detect.cpp  pca.h  predict.cpp  train.cpp
trunk/ppl_detection/svm_models/: my_model.model
trunk/tilting_servo/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/tilting_servo/src/: servo_action_server.cpp  servotf.cpp
trunk/tilting_servo/srv/: move_servo.srv
